# genai-lab

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md
.github/: dependabot.yml
.github/workflows/: ci.yml  update-readme.yml
rag-chunking-bench/: README.md  pyproject.toml  requirements.txt
rag-chunking-bench/experiments/: aggregate.py  calibrate_matched.py  make_figures.py  make_hero_figure.py  reproduce.py  run_grid.py  summarize.py  summarize_ablations.py  summarize_chroma.py  summarize_errors.py  summarize_matched.py  summarize_retrievers.py  summarize_seeds.py  summarize_semantic.py  summarize_tokenizers.py
rag-chunking-bench/research/: NOTES.md
rag-chunking-bench/results/: summary_chroma_bm25.md  summary_chroma_bm25_ablations.md  summary_chroma_bm25_errors.md  summary_chroma_bm25_matched.md  summary_chroma_bm25_matched_truncate.md  summary_chroma_bm25_moderation.md  summary_chroma_bm25_semantic.md  summary_chroma_dense.md  summary_chroma_lsa.md  summary_chroma_retrievers.md  summary_chroma_tfidf.md  summary_dev-v1.1_bm25.md  summary_dev-v1.1_bm25_ablations.md  summary_dev-v1.1_bm25_matched.md  summary_dev-v1.1_bm25_matched_truncate.md  summary_dev-v1.1_bm25_seeds.md  summary_dev-v1.1_bm25_semantic.md  summary_dev-v1.1_bm25_tokenizers.md  summary_dev-v1.1_dense.md  summary_dev-v1.1_lsa.md  summary_dev-v1.1_retrievers.md  summary_dev-v1.1_tfidf.md
rag-chunking-bench/src/: __init__.py  chunkers.py  data.py  dense.py  metrics.py  retrievers.py  tokenization.py
rag-chunking-bench/tests/: test_chunkers.py  test_data.py  test_dense.py  test_experiments.py  test_metrics.py  test_reproduce.py  test_retrievers.py  test_tokenization.py
scripts/: sync_latest.py
slm-judge-audit/: .gitignore  README.md  pyproject.toml  requirements.txt
slm-judge-audit/experiments/: bias_model.py  calibration.py  compliance_view.py  length_probe.py  make_figures.py  run_grid.py  scaling_curve.py  summarize.py
slm-judge-audit/research/: NOTES.md
slm-judge-audit/results/raw/: llama-3.2-1b__minimal.jsonl  llama-3.2-1b__minimal.meta.json  llama-3.2-3b__minimal.jsonl  llama-3.2-3b__minimal.meta.json  qwen2.5-0.5b__minimal.jsonl  qwen2.5-0.5b__minimal.meta.json  qwen2.5-1.5b__minimal.jsonl  qwen2.5-1.5b__minimal.meta.json  qwen2.5-3b__minimal.jsonl  qwen2.5-3b__minimal.meta.json
slm-judge-audit/results/summary/: bias_model__minimal.json  calibration__minimal.json  length_probe__minimal.json  llama-3.2-1b__minimal.json  llama-3.2-1b__minimal__compliance.json  llama-3.2-3b__minimal.json  llama-3.2-3b__minimal__compliance.json  qwen2.5-0.5b__minimal.json  qwen2.5-0.5b__minimal__compliance.json  qwen2.5-1.5b__minimal.json  qwen2.5-1.5b__minimal__compliance.json  qwen2.5-3b__minimal.json  qwen2.5-3b__minimal__compliance.json
slm-judge-audit/src/: analysis.py  baselines.py  bias_model.py  calibration.py  data.py  judge.py  length_probe.py  prompts.py
slm-judge-audit/tests/: test_analysis.py  test_baselines.py  test_bias_model.py  test_calibration.py  test_data.py  test_judge.py  test_length_probe.py  test_prompts.py
